# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

*portage 1.8.9_pre9 (21 Feb 2002)

  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org>: moved entirety of Portage
  download/digest code from ebuild.sh (bash) to portage.py (python).  No
  support for custom FETCHCOMMANDs yet, but that's coming soon.  Good news is
  that it appears to work well and allowed some cleanups and optimizations to
  doebuild().  SYNC support added.  See cnf/make.conf for more info --
  basically, "emerge rsync" (now callable via "emerge sync" as well) supports a
  configurable "Portage server" that begins either with "rsync://" or "cvs://".
  "emerge sync" is now not only a clean front-end, but a configurable front-end
  to the Portage update process.  I also removed dependency checking from
  'ebuild'.  This allowed me to removed some redundant code from portage.py,
  and seemed fine to do since 'ebuild' is more and more becoming a low-level
  developer tool.
  
  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org>: rewrite of cumulative USE
  setting code so that the new FEATURES (what used to be called MAINTAINER) is
  now cumulative and supports "-" and "-*" options.  FEATURES is expanded using
  all config files, while USE ignores make.globals but uses everything else.
  Optimization of a couple parts of doebuild().  Upgraded expandpath() and used
  it in one place where it was removed accidentally (in the new merge code.)
  Master category list is now stored externally in
  ${PORTDIR}/profiles/categories for ease of maintenance.
  
  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org> emerge: now supports the
  EMERGE_OPTS make.conf variable for enabling emerge options by default.
  Closes bug #605.
  
  21 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: dep_match() now
  works with * deps (again?  Looks like the code got ripped out somehow); this
  closes bug #490.
  